[project]
name = "code-assistant"
version = "0.0.1"
description = "Code generation with RAG and self-correction using LangGraph."
authors = [
    { name = "David James", email = "david@othertales.co" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.13.4",
    "langchain==0.3.25",
    "langchain_cohere==0.4.4",
    "langchain_community==0.3.24",
    "langchain_core==0.3.60",
    "langchain_mongodb==0.6.2",
    "langchain_openai==0.3.17",
    "langchain_pinecone==0.2.6",
    "langgraph==0.4.5",
    "pydantic==2.11.4",
    "python-dotenv>=1.0.1",
    "langchain-anthropic>=0.1.23",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.code_assistant", "code_assistant"]
[tool.setuptools.package-dir]
"langgraph.templates.code_assistant" = "src/code_assistant"
"code_assistant" = "src/code_assistant"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
